--- a/app/src/main/res/layout/frag_home.xml
+++ b/app/src/main/res/layout/frag_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.chen.app.viewmodel.HomeViewModel" />
@@ -18,11 +19,23 @@
             android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="@{(view) -> viewModel.onClick(view)}"
+            android:text="@{viewModel.btnText}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:text="@{viewModel.btnText}"
-            android:onClick="@{(view) -> viewModel.onClick(view)}"/>
+            tools:text="详情"/>
+
+        <Button
+            android:id="@+id/btnOOM"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_5"
+            android:onClick="@{(view) -> viewModel.onClick(view)}"
+            android:text="oom"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/button1" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
